--- a/public/main.html
+++ b/public/main.html
@@ -598,7 +598,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <h3>MothershipTheatre</h3>
       <p>Texto</p>
         <br>
-    <br><p><b>Thesis 01</b> <br>
+    <p><b>Thesis 01</b> <br>
 Modern Envelope <br>
 Modernism compresses everything in its envelope in order to achieve transparency. Materials and material systems represents ideal truth (limpid, pure, smooth, simple, condensed, almost invisible) becoming almost transparent itself, thus allowing transparency of the interior that encloses (the lack of an interior, the interior as spectacle).<br>
 Ideal Paradigm: A glass house <br>
@@ -1154,13 +1154,13 @@ Publicado en <i>Symmetry: The One and the Many (David Salomon, Archivos de Arqui
       <h3>En el Muro</h3>
       <p>Texto</p>
       <br>
-      <p>En el centro de una habitación ubicamos un muro que en cada una de sus caras tiene dos vanos del tamaño de una puerta. La distancia entre las caras está exagerada para volver espacial el interior del muro que en su piso tiene una montaña de tierra. </p>
+      <p>En el centro de una habitación ubicamos un muro que en cada una de sus caras tiene dos vanos del tamaño de una puerta. La distancia entre las caras está exagerada para volver espacial el interior del muro que en su piso tiene una montaña de tierra. 
       <br>
+     En las caras laterales hay espejos que reflejan y repiten al infinito la imagen del muro. Una serie de perfiles metálicos sostienen al muro para que no ceda ante el empuje de la tierra. 
       <br>
-     <p> En las caras laterales hay espejos que reflejan y repiten al infinito la imagen del muro. Una serie de perfiles metálicos sostienen al muro para que no ceda ante el empuje de la tierra. </p> 
+      Dentro de los perfiles hay semillas de diversas plantas florales. Los concurrentes son invitados a tomarlas, introducirlas en un vasito de jardinería, rellenarlo con tierra y esperar que al llevarlo a su casa, germine y crezca una planta. 
       <br>
-      <p>Dentro de los perfiles hay semillas de diversas plantas florales. Los concurrentes son invitados a tomarlas, introducirlas en un vasito de jardinería, rellenarlo con tierra y esperar que al llevarlo a su casa, germine y crezca una planta.<br>  
-        <p>Al igual que la luz, que permite ver lo iluminado al ocultarse a sí misma, los muros se hacen presentes al delimitar de manera invisible los espacios que habitamos. Un muro separa un lado de otro lado y en esta separación se pone en juego nuestra relación con la naturaleza. En este sentido al delimitar espacios hacemos cuentas con la naturaleza.<br></p>  
+      Al igual que la luz, que permite ver lo iluminado al ocultarse a sí misma, los muros se hacen presentes al delimitar de manera invisible los espacios que habitamos. Un muro separa un lado de otro lado y en esta separación se pone en juego nuestra relación con la naturaleza. En este sentido al delimitar espacios hacemos cuentas con la naturaleza.<br></p>  
      <br>
       <br>
   <p>
@@ -1193,13 +1193,10 @@ Performance corporal: Sofia Kauer y Ana S. <br>
       <h3>Parque de Las Ciencias</h3>
         <p>Texto</p>
       <br>
-        <p>El predio se cubre con vegetación salvaje. Hay diferentes tipos de regiones de naturaleza, cada una con atributos características correspondientes a cada una de las regiones geográficas de la República Argentina. Al igual que sucede en el imaginario colectivo de los ciudadanos, se encuentran mezcladas y repartidas.</p>
-     <br>
-      <br><p> Sobre esta naturaleza emerge desde alguna capa geológica una grilla de columnas. El módulo coincide en ambas direcciones con el módulo del edificio del Polo Tecnológico. Las 325 columnas de la grilla tienen un artefacto de iluminación cilíndrico en su tramo superior que permite iluminar el parque de noche convirtiendo al Parque de las Ciencias junto con el Polo Tecnologico en un hito visible, identificable y presente en la ciudad. La altura de las columnas es igual al módulo mencionado, por lo que se podría sospechar un cubo, a la vez que permite que sean vistas desde la avenida Juan B. Justo: el parque de las ciencias, franquea con elementos mínimos el terraplén y las vías del tren.
-<br> Las columnas operan, en cierto modo, como opera la ciencia: estableciendo, antes que otra cosa, puntos de referencia. Son además elementos estructurales, delimitadores de usos, fricción entre lo natural y lo artificial o simplemente la iluminación de todo el parque.</p>
-        <br>
-          <br> <p>Con elementos mínimos y sostenidos por el pensamiento de que algunas veces menos es suficiente, la arquitectura flota sobre el manto de naturaleza. La grilla estructura espacialmente y delimita las dimensiones y la ubicación de cada una de estas islas. Una red de caminos las conecta. Así el Parque de las ciencias es un manto de naturaleza salvaje sobre el que flota la arquitectura en forma de islas asiéndose de una grilla de columnas.</p>
-      <br>
+        <p>El predio se cubre con vegetación salvaje. Hay diferentes tipos de regiones de naturaleza, cada una con atributos características correspondientes a cada una de las regiones geográficas de la República Argentina. Al igual que sucede en el imaginario colectivo de los ciudadanos, se encuentran mezcladas y repartidas.
+      <br>Sobre esta naturaleza emerge desde alguna capa geológica una grilla de columnas. El módulo coincide en ambas direcciones con el módulo del edificio del Polo Tecnológico. Las 325 columnas de la grilla tienen un artefacto de iluminación cilíndrico en su tramo superior que permite iluminar el parque de noche convirtiendo al Parque de las Ciencias junto con el Polo Tecnologico en un hito visible, identificable y presente en la ciudad. La altura de las columnas es igual al módulo mencionado, por lo que se podría sospechar un cubo, a la vez que permite que sean vistas desde la avenida Juan B. Justo: el parque de las ciencias, franquea con elementos mínimos el terraplén y las vías del tren.
+<br> Las columnas operan, en cierto modo, como opera la ciencia: estableciendo, antes que otra cosa, puntos de referencia. Son además elementos estructurales, delimitadores de usos, fricción entre lo natural y lo artificial o simplemente la iluminación de todo el parque.
+          <br> Con elementos mínimos y sostenidos por el pensamiento de que algunas veces menos es suficiente, la arquitectura flota sobre el manto de naturaleza. La grilla estructura espacialmente y delimita las dimensiones y la ubicación de cada una de estas islas. Una red de caminos las conecta. Así el Parque de las ciencias es un manto de naturaleza salvaje sobre el que flota la arquitectura en forma de islas asiéndose de una grilla de columnas.</p>
         <p>lorem ipsum dolor</p>
        
       <!-- Add more content here if needed -->
@@ -1226,12 +1223,12 @@ Performance corporal: Sofia Kauer y Ana S. <br>
       <p>Texto</p>
       <br>
       <p>¿Qué puede decir la arquitectura sobre la arquitectura? ¿Qué potencias existen en su interior que le permitan pensarse a si misma? <br>
-Es cierto que la figura del laberinto esconde la esperanza de la desorientación y, a diferencia de una grilla cartesiana extendida; la orientación la determina el descubrimiento mediante la dominación y el hallazgo.</p>
+Es cierto que la figura del laberinto esconde la esperanza de la desorientación y, a diferencia de una grilla cartesiana extendida; la orientación la determina el descubrimiento mediante la dominación y el hallazgo.
        <br>
-       <p> Oponiéndose al panóptico metropolitano, la apariencia de un laberinto habilita la posibilidad a la resistencia, a poder ejercer algún tipo de fuerza contraria. <br>
-Si la modernidad entendió al laberinto como un signo anti arquitectónico, entendemos que la orientación que surge de la apropiación de un laberinto sucede luego del descubrimiento del orden. Es decir, el orden no es indicado con claridad. Se sugiere para que pueda ser experimentado. Hoy sabemos que todos los laberintos tienen puertas, así como Dédalo, el arquitecto griego, solo será volando que podremos salir del laberinto que nosotros mismos construimos.</p>
+      Oponiéndose al panóptico metropolitano, la apariencia de un laberinto habilita la posibilidad a la resistencia, a poder ejercer algún tipo de fuerza contraria. <br>
+Si la modernidad entendió al laberinto como un signo anti arquitectónico, entendemos que la orientación que surge de la apropiación de un laberinto sucede luego del descubrimiento del orden. Es decir, el orden no es indicado con claridad. Se sugiere para que pueda ser experimentado. Hoy sabemos que todos los laberintos tienen puertas, así como Dédalo, el arquitecto griego, solo será volando que podremos salir del laberinto que nosotros mismos construimos.
       <br>
-      <p> El pabellón se constituye como un esqueleto a la espera de su activación. Serán los cuerpos, la carne y, evitando la postergación que supone una caja blanca vacía, será también la arquitectura que se pretende sostener la que devolverá el movimiento. <br>
+      El pabellón se constituye como un esqueleto a la espera de su activación. Serán los cuerpos, la carne y, evitando la postergación que supone una caja blanca vacía, será también la arquitectura que se pretende sostener la que devolverá el movimiento. <br>
 </p>
       <p>lorem ipsum dolor</p>
     </div>
@@ -1256,10 +1253,10 @@ Si la modernidad entendió al laberinto como un signo anti arquitectónico, ente
       <br>
       <p>Elevado cuarenta centímetros del nivel de piso situamos un dispositivo que no está preparado para ir a ninguna parte. Delimitado por dos muros y por cuatro puertas que permiten el acceso a su interior en el cual hay cuatro sillas de madera empotradas y una radio am/fm que permite sintonizar las cadenas locales.</p>
       <br>
-      <p> Tanto las puertas como la pared trasera y delantera del dispositivo tienen aberturas cerradas por vidrios. 
-Las geometrías invisibles son conceptos que gobiernan todos los espacios que habitamos, reglando nuestras relaciones espaciales. Responden a razones a las que, aunque desconocidas nos sometemos. </p>
+    Tanto las puertas como la pared trasera y delantera del dispositivo tienen aberturas cerradas por vidrios. 
+Las geometrías invisibles son conceptos que gobiernan todos los espacios que habitamos, reglando nuestras relaciones espaciales. Responden a razones a las que, aunque desconocidas nos sometemos. 
       <br>
-      <p>Reconocer con las herramientas conceptuales de la arquitectura cual es la estructura geométrica invisible que gobierna una situación espacial como un modo político de ver el mundo (o: para ver el mundo de un modo político).</p>
+      Reconocer con las herramientas conceptuales de la arquitectura cual es la estructura geométrica invisible que gobierna una situación espacial como un modo político de ver el mundo (o: para ver el mundo de un modo político).
       <br>
       <!-- Add more content here if needed -->
     <p>lorem ipsum dolor</p>
@@ -1325,13 +1322,11 @@ Di Tella, brinda clínicas de proyecto para artistas y recientemente lanzó la p
 Público, un newsletter de frecuencia errática. Ha sido director del Centro de Estudios de Arquitectura
 Contemporánea de la Universidad Torcuato Di Tella y en la misma casa de estudios ha sido coordinador
 del área de Historia y Teoría, tutor de tesis de grado y profesor de talleres de proyecto, campos menores
-y seminarios de historia y teoría tanto en grado como en posgrado. <br>
-       <br>
+y seminarios de historia y teoría tanto en grado como en posgrado. 
         <br> Ha sido director de META Arquitectos,
 obteniendo el primer premio de la galería de arte contemporáneo Matienschon de Buenos Aires,
 Argentina y una primera mención en el Concurso Nacional de Proyectos Preliminares para el Nuevo
-Pabellón del Museo de Arquitectura de la Sociedad Central de Arquitectos. <br> 
-        <br>
+Pabellón del Museo de Arquitectura de la Sociedad Central de Arquitectos. 
         <br>
         Ha dictado conferencias y ha
 sido crítico invitado en IIT, Chicago, University of Tokyo, Japón, EAEU y FADU-UBA, Argentina. Se ha
