--- a/public/main.html
+++ b/public/main.html
@@ -142,6 +142,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="freesbeexsg">
       <span class="anchor" id="casaJBRC3"></span>
       <h3></h3>
+       <br>
       <p>Fotografías</p> 
       <br>
       <br>
@@ -158,6 +159,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC4"></span>
       <h3></h3>
+        <br>
       <p>Series</p>
       <br>
        <br>
@@ -211,6 +213,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP2"></span>
       <h3></h3>
+       <br>
       <p>Planos</p>
       <br>
       <br>
@@ -223,6 +226,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP3"></span>
       <h3></h3>
+       <br>
       <p>Fotos</p>
       <br>
       <br>
@@ -257,6 +261,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFG2"></span>
       <h3></h3>
+       <br>
       <p>Planos</p>
       <br>
       <br>
@@ -269,6 +274,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFG3"></span>
       <h3></h3>
+       <br>
       <p>Fotos</p>
       <br>
       <br>
@@ -416,6 +422,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="edificioSCW"></span>
       <h3></h3>
+       <br>
       <p>Planos</p>
        <br>
        <br>
@@ -428,6 +435,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="edificioSCW"></span>
       <h3></h3>
+       <br>
       <p>Imágenes</p>
        <br>
        <br>
@@ -451,6 +459,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
 <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFKL"></span>
       <h3></h3>
+  <br>
       <p>Planos</p>
   <br>
   <br>
@@ -462,6 +471,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFKL"></span>
       <h3></h3>
+      <br>
       <p>Fotografías</p>
   <br>
   <br>
@@ -478,6 +488,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFKL"></span>
       <h3></h3>
+      <br>
       <p>Avenida de Mayo, Buenos Aires</p>
   <br>
   <br>
@@ -505,6 +516,7 @@ profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviénd
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="erewhon"></span>
       <h3></h3>
+      <br>
       <p>Galería Digital de Arte</p>
       <br>
       <b><p>Stagger</p></b>
@@ -573,6 +585,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="cenotafios">
       <span class="anchor" id="cute-chitecture"></span>
       <h3></h3>
+      <br>
       <p>Arquitectura Póstuma</p>
       <br>
       <br>
@@ -636,6 +649,7 @@ Parte del Lab 009 de Jesse Reiser en la Escuela de Arquitectura y Estudios Urban
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="mothershiptheatre"></span>
       <h3></h3>
+       <br>
       <p>Thesis for an Opaque Architecture </p>
         <br>
         <br> 
@@ -683,6 +697,7 @@ el momento exacto en el que se derrumba el complejo de viviendas Pruitt Igoe, mu
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="sinestado">
       <span class="anchor" id="sinestado"></span>
       <h3></h3>
+      <br>
       <p>Multitudes</p>
       <br>
        <p><b><u>Escalones y Puertas Giratorias</u></b></p>
@@ -722,6 +737,7 @@ Fragmentos de la publicación Arquitectura sin Estado: Albergar Multitudes (Arch
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="sinestado">
       <span class="anchor" id="sinestado"></span>
       <h3></h3>
+       <br>
       <p>Multitudes</p>
       <br>
        <p><b><u>Escalones y Puertas Giratorias</u></b></p>
@@ -754,6 +770,7 @@ Fragmentos de la publicación Arquitectura sin Estado: Albergar Multitudes (Arch
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="sinestado">
       <span class="anchor" id="sinestado"></span>
       <h3></h3>
+      <br>
       <p>Albergues para Multitudes</p>
       <br>
       <p><b><u>Escalones y Puertas Giratorias</u></b></p>
@@ -795,6 +812,7 @@ En la cultura arquitectónica actual, donde todo posicionamiento afirmativo ráp
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="vanguardias"></span>
       <h3></h3>
+      <br>
       <p>Manifiestos Prospectivos</p>
        <br>
      <br>
@@ -839,6 +857,7 @@ En la cultura arquitectónica actual, donde todo posicionamiento afirmativo ráp
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="ametralladora"></span>
       <h3></h3>
+      <br>
       <p>Personajes Sensibles</p>
       <br>
       <br><img class="lazyload" src="assets/img/28_utopia machine gun/01.jpg" alt="Image 1">
@@ -891,6 +910,7 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="estados">
       <span class="anchor" id="estados"></span>
       <h3></h3>
+      <br>
       <p>Imágenes</p>
       <br>
       <br>
@@ -1198,6 +1218,7 @@ Publicado en <i>Symmetry: The One and the Many (David Salomon, Archivos de Arqui
     
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3></h3>
+       <br>
       <p>No-Man’s Land</p>
        <br>
       <br>
@@ -1230,6 +1251,7 @@ Proyecto y construcción: Manuel Mensa, Lucas Torres Agüero y Matías Etchart. 
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="muro">
       <h3></h3>
+      <br>
       <p>Instalación en Matienschön</p>
       <br>
      <br>
@@ -1241,6 +1263,7 @@ Proyecto y construcción: Manuel Mensa, Lucas Torres Agüero y Matías Etchart. 
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="muro">
       <h3></h3>
+      <br>
       <p>Instalación en Matienschön</p>
       <br>
      <br>
@@ -1274,6 +1297,7 @@ Performance corporal: Sofia Kauer y Ana S. <br>
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3></h3>
+      <br>
         <p>Un Océano de Columnas</p>
       <br>
      <br>
@@ -1286,7 +1310,8 @@ Performance corporal: Sofia Kauer y Ana S. <br>
       <!-- Add more content here if needed -->
     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>Parque de Las Ciencias</h3>
+      <h3></h3>
+       <br>
         <p></p>
       <br>
      <br>
@@ -1313,19 +1338,28 @@ Si la modernidad entendió al laberinto como un signo anti arquitectónico, ente
 </p>
       <p>lorem ipsum dolor</p>
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3></h3>
-      <p>Columnas</p>
+      <br>
+      <p>Planos</p>
       <br>
        <br>
       <img class="lazyload" src="assets/img/17_Laberinto/01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/17_Laberinto/02.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/17_Laberinto/04.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/17_Laberinto/05.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/17_Laberinto/06.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/17_Laberinto/07.jpg" alt="Image 1">
+             <img class="lazyload" src="assets/img/17_Laberinto/07.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/17_Laberinto/08.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/17_Laberinto/09.jpg" alt="Image 1">
+      <p>lorem ipsum dolor</p>
+    </div>
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <h3></h3>
+      <br>
+      <p>Columnas</p>
+      <br>
+       <br>
+      <img class="lazyload" src="assets/img/17_Laberinto/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/03.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/17_Laberinto/05.jpg" alt="Image 1">
+
       <p>lorem ipsum dolor</p>
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -1344,6 +1378,7 @@ Las geometrías invisibles son conceptos que gobiernan todos los espacios que ha
     </div>
  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3></h3>
+   <br>
       <p>Vehículo</p>
       <br>
       <br>
@@ -1428,6 +1463,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
     
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3></h3>
+       <br>
       <p>Oficina</p>
        <br>
        <br>
