--- a/public/main.html
+++ b/public/main.html
@@ -51,21 +51,37 @@
       <p>contacto@manuelmensa.com</p>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br> <p>Índice</p>
-      <br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
+      <br><a href="#matters">Matters of Fact <br> / El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><a style="text-decoration:none">Casa J.B.R.C. <br> </a><a href="#casaJBRC">/ Texto Descriptivo </a><br><a href="#casaJBRC2">/ Planos </a><br><a href="#casaJBRC3">/ Fotografías de Santiago Giusto </a> <br><a href="#casaJBRC4">/ Series</a>
       <br><br><a style="text-decoration:none">Casa E.R.C.P. </a> <br><a href="#casaERCP">/ Texto Descriptivo </a> <br><a href="#casaERCP2">/ Planos </a> <br><a href="#casaERCP3">/ Fotos</a>
       <br><br><a style="text-decoration:none">Casa F.G. </a> <br><a href="#casaFG">/ Texto Descriptivo </a> <br><a href="#casaFG2">/ Planos </a> <br><a href="#casaFG3">/ Fotos</a>
-      <br><br><a href="#creciendo">Creciendo en Público / Newsletter Errático</a>
-      <br><br><a href="#edificioSCW">Edificio S.C.W. / Saavedra, Buenos Aires</a>
-      <br><br><a href="#casaFKL">Casa F.K.L. / Avenida de Mayo, Buenos Aires</a>
-      <br><br><a href="#erewhon">Erewhon / Galería Digital de Arte</a>
-      <br><br><a href="#muros">Muros, Puertas y Vanos / Hacia un Minimalismo Explosivo</a>
-      <br><br><a href="#cute-chitecture">Cute-chitecture / Arquitectura Póstuma</a>
-      <br><br><a href="#mothershiptheatre">MothershipTheatre / Thesis for an Opaque Architecture</a>
-      <br><br><a href="#sinestado">Arquitectura sin Estado / Albergues para Multitudes</a>
-      <br><br><a href="#vanguardias">Vanguardias o Nada / Manifiestos Prospectivos</a>
-      <br><br><a href="#ametralladora">Ametralladora de Utopías / Personajes Sensibles</a>
-      <br><br><a href="#estados">Estados de la Arquitectura / Seis Alegorías</a>
+      <br><br><a href="#creciendo">Creciendo en Público <br>/ Newsletter Errático</a>
+      <br><br><a href="#edificioSCW">Edificio S.C.W. <br>/ Texto Descriptivo</a> <br> <a href="#casaFG3">/ Planos</a> <br> <a href="#casaFG3">/ Imágenes</a>
+      <br><br><a href="#casaFKL">Casa F.K.L. <br>/ Avenida de Mayo, Buenos Aires</a> <br><a href="#casaFG2">/ Planos </a> <br><a href="#casaFG3">/ Fotos</a> <br><a href="#casaFG3">/ Video</a> 
+      <br><br><a href="#erewhon">Erewhon <br>/ Texto Descriptivo</a> <br><a href="#casaFG3">/ Galería Digital de Arte</a> 
+      <br><br><a href="#muros">Muros, Puertas y Vanos <br>/ Hacia un Minimalismo Explosivo</a>
+      <br><br><a href="#cute-chitecture">Cute-chitecture <br>/ Texto Descriptivo</a> <br><a href="#casaFG3">/ Arquitectura Póstuma</a> 
+      <br><br><a href="#mothershiptheatre">MothershipTheatre <br>/ Thesis for an Opaque Architecture</a> <br><a href="#casaFG2">/ Thesis for an Opaque Architecture </a> <br><a href="#casaFG3">/ Thesis for an Opaque Architecture</a> <br><a href="#casaFG3">/ Video</a> 
+      <br><br><a href="#sinestado">Arquitectura sin Estado <br>/ Introducción</a> <br><a href="#casaFG2">/ Multitudes </a> <br><a href="#casaFG3">/ Multitudes</a> <br><a href="#casaFG3">/ Albergues para Multitudes</a> 
+      <br><br><a href="#vanguardias">Vanguardias o Nada <br>/ Texto</a><br><a href="#casaFG2">/ Manifiestos Prospectivos </a>
+      <br><br><a href="#ametralladora">Ametralladora de Utopías <br>/ Texto</a><br><a href="#casaFG2">/ Personajes Sensibles</a>
+      <br><br><a href="#estados">Estados de la Arquitectura <br>/ Seis Alegorías</a> <a href="#casaFG3">/ Imágenes</a>
+       <br><br><a href="#estados">Agrupación Militancia Arquitectura <br>/ Fanzine 2013</a> 
+       <br><br><a href="#estados">Personajismo<br>/ Del Arquitecto-Estrella al Arquitecto-Constelación</a>
+      <br><br><a href="#estados">El Cuerpo Hueco de la Arquitectura<br>/Circular #01. Arquitectura, Cuerpo y Cosmos</a>
+      <br><br><a href="#estados">Architecture Postponed<br>/Texto</a><br><a href="#casaFG2">/ An Architecture Museum </a>
+      <br><br><a href="#estados">Tu Amorosa<br>/Serla</a><br>
+      <br><br><a href="#estados">Never Even <br> /(Respeto por las Cosas como Son)</a>
+      <br><br><a href="#estados">Singular 00 <br> /Proposición</a>
+      <br><br><a href="#estados">Hacia una Arquitectura sin Fin <br> /Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
+       <br><br><a href="#estados">Un Memorial para la Revolución<br> / Texto</a> <br><a href="#casaFG3">/ .</a>
+      <br><br><a href="#estados">En el Muro <br>/Texto</a> <br><a href="#casaFG3">/ .</a> <br><a href="#casaFG3">/ .</a>
+      <br><br><a href="#estados">Parque de las Ciencias<br> /Texto</a> <br><a href="#casaFG3">/ .</a> <br><a href="#casaFG3">/ .</a>
+      <br><br><a href="#estados">Laberinto <br>/Texto</a> <br><a href="#casaFG3">/ .</a> <br><a href="#casaFG3">/ .</a>
+      <br><br><a href="#estados">Geometrías Invisibles <br>/Texto</a> <br><a href="#casaFG3">/ .</a> 
+       <br><br><a href="#estados">Hoy el Mundo <br>/Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
+      <br><br><a href="#estados">Estudio <br>/Texto</a>  <a href="#casaFG3">/ Oficina/a>
+      <br><br><a href="#estados">Sitio Web <br>/Multicolumna</a>
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="matters"></span>
@@ -123,7 +139,6 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC2"></span>
       <h3>.</h3>
-      <br>
       <p>Planos</p>
       <br>
       <br>
