--- a/public/main.html
+++ b/public/main.html
@@ -58,7 +58,7 @@
       <br><br><a href="#creciendo">Creciendo en Público <br>/ Newsletter Errático</a>
       <br><br><a href="#edificioSCW">Edificio S.C.W. <br>/ Texto Descriptivo</a> <br> <a href="#casaFG3">/ Planos</a> <br> <a href="#casaFG3">/ Imágenes</a>
       <br><br><a href="#casaFKL">Casa F.K.L. <br>/ Avenida de Mayo, Buenos Aires</a> <br><a href="#casaFG2">/ Planos </a> <br><a href="#casaFG3">/ Fotos</a> <br><a href="#casaFG3">/ Video</a> 
-      <br><br><a href="#erewhon">Erewhon <br>/ Texto Descriptivo</a> <br><a href="#casaFG3">/ Galería Digital de Arte</a> 
+      <br><br><a href="#erewhon">Erewhon <br>/ Texto Descriptivo</a> <br><a href="#casaFG3">/ Galería Digital de Arte</a> <br><a href="#casaFG2">/ Planos </a> <br><a href="#casaFG3">/ Fotos</a>
       <br><br><a href="#muros">Muros, Puertas y Vanos <br>/ Hacia un Minimalismo Explosivo</a>
       <br><br><a href="#cute-chitecture">Cute-chitecture <br>/ Texto Descriptivo</a> <br><a href="#casaFG3">/ Arquitectura Póstuma</a> 
       <br><br><a href="#mothershiptheatre">MothershipTheatre <br>/ Thesis for an Opaque Architecture</a> <br><a href="#casaFG2">/ Thesis for an Opaque Architecture </a> <br><a href="#casaFG3">/ Thesis for an Opaque Architecture</a> <br><a href="#casaFG3">/ Video</a> 
@@ -423,6 +423,41 @@ In Front of a Nightclub<br>
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFG"></span>
+      <h3>Pasar la Noche Juntos</h3>
+      <p>Texto Descriptivo</p>
+      <br>
+      <p>Experimentar con uno mismo, embarcarse en aventuras caóticas, emprender una investigación trascendental, ir en busca de lo desconocido, apostar cada vez volviendo al azar un asunto de afirmación, ver ya sin los ojos, destruir con crueldad los clichés, parecen ser las acciones que emprenden los que se aventuran en el caos de la experimentación vital. Pasar la Noche Juntxs es una serie de doce entrevistas consecutivas entre el atardecer de un día y el amanecer del día siguiente. Diez personas conversan con Manuel Mensa y Lux Valladolid, sobre su relación con la oscuridad, la noche y el caos pero sobre todo de como hacen de su práctica una forma de investigar e ir hacia lo desconocido. Las conversaciones se dieron entre las 6pm y las 8am y duraron aproximadamente sesenta minutos cada una.</p>
+      <!-- Add more content here if needed -->
+    </div>
+     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <h3>Pasar la Noche Juntos</h3>
+      <p>Lorem Ipsum</p> 
+      <br>
+   <p><b>Magdalena Molinari</b></p>
+      <a href="https://youtu.be/2XUOTyi9EFw" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/01.png" alt="Image 1"></a><br>
+   <p><b>Isha Kim</b></p>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=3024" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/02.png" alt="Image 1"></a><br>
+       <p><b>Renée Charmichael</b>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=6559" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/03.png" alt="Image 1"></a><br>
+          <p><b>Mene Savasta</b></p>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=12022" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/04.png" alt="Image 1"></a><br>
+   <p><b>Malena Sout Arenas</b></p>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=16463" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/05.png" alt="Image 1"></a><br>
+       <p><b>Gabi Leoni</b>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=19906" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/06.png" alt="Image 1"></a><br>
+          <p><b>Julián Brangold</b></p>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=24822" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/07.png" alt="Image 1"></a><br>
+   <p><b>Santiago Giusto</b></p>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=28685" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/08.png" alt="Image 1"></a><br>
+       <p><b>Diego Alberti</b>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=32748" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/09.png" alt="Image 1"></a><br>
+         <p><b>Mecha Mio</b>
+      <a href="https://youtu.be/2XUOTyi9EFw?t=37195" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/10.png" alt="Image 1"></a><br>
+      <p>lorem ipsum dolor</p>
+      <!-- Add more content here if needed -
+    </div>
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaFG"></span>
       <h3>Edificio S.C.W.</h3>
       <p>Texto Descriptivo</p>
       <br>
@@ -531,34 +566,72 @@ profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviénd
       <p>Paired stairs emanating from a center form an <u>orderly</u> labyrinth, creating a <u>flitting </u>yet recognizable path.
 Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>evolution</u>.</p>
-      <img class="lazyload" src="assets/img/33_rooms/01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms/02.png" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms/09.jpg" alt="Image 1">
+  <br>
       <b><p>Stagggger</p></b>
       <p>Paired stairs emanating from a center form a <u>challenging</u> labyrinth, creating a <u>shifting</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>abundance</u>.</p>
-      <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms/04.png" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms/10.jpg" alt="Image 1">
+      <br>
       <b><p>Stagggggger</p></b>
       <p>Paired stairs emanating from a center form a <u>complex</u> labyrinth, creating a <u>fleeting</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>proliferation.</u></p>
-      <img class="lazyload" src="assets/img/33_rooms/05.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms/06.png" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms/11.jpg" alt="Image 1">
+     <br>
       <b><p>Stagggggggger</p></b>
       <p>Paired stairs emanating from a center form an <u>inmense</u> labyrinth, creating a <u>variegated</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>profusion</u>.</p>
-      <img class="lazyload" src="assets/img/33_rooms/07.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/33_rooms/08.png" alt="Image 1">
+      <br>
+      <p>lorem ipsum dolor</p>
+      <!-- Add more content here if needed -->
+    </div>
+     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="erewhon"></span>
+      <h3>.</h3>
+      <p>Galería Digital de Arte</p>
+      <br>
+      <b><p>Stagger</p></b>
+      <br>
+      <img class="lazyload" src="assets/img/33_rooms/09.jpg" alt="Image 1">
+      <b><p>Stagggger</p></b>
+      <br>
+      <img class="lazyload" src="assets/img/33_rooms/10.jpg" alt="Image 1">
+      <b><p>Stagggggger</p></b>
+      <br>
+      <img class="lazyload" src="assets/img/33_rooms/11.jpg" alt="Image 1">
+      <b><p>Stagggggggger</p></b>
+      <br>
       <img class="lazyload" src="assets/img/33_rooms/12.jpg" alt="Image 1">
       <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="erewhon"></span>
+      <h3>.</h3>
+      <p>Galería Digital de Arte</p>
+      <br>
+      <b><p>Stagger</p></b>
+      <br>
+      <img class="lazyload" src="assets/img/33_rooms/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/02.png" alt="Image 1">
+      <b><p>Stagggger</p></b>
+     <br>
+      <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/04.png" alt="Image 1">
+      <b><p>Stagggggger</p></b>
+      <br>
+      <img class="lazyload" src="assets/img/33_rooms/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/06.png" alt="Image 1">
+      <b><p>Stagggggggger</p></b>
+      <br>
+      <img class="lazyload" src="assets/img/33_rooms/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/08.png" alt="Image 1">
+      <br>
+      <p>lorem ipsum dolor</p>
+      <!-- Add more content here if needed -->
+    </div>
+   
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="muros"></span>
       <h3>Muros, Puertas y Vanos</h3>
@@ -702,7 +775,7 @@ el momento exacto en el que se derrumba el complejo de viviendas Pruitt Igoe, mu
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="sinestado">
       <span class="anchor" id="sinestado"></span>
-      <h3></h3>
+      <h3>.</h3>
       <br>
       <p>Multitudes</p>
       <br>
