--- a/public/main.html
+++ b/public/main.html
@@ -438,21 +438,21 @@ In Front of a Nightclub<br>
       <a href="https://youtu.be/2XUOTyi9EFw" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/01.png" alt="Image 1"></a><br>
    <p><b>Isha Kim</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=3024" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/02.png" alt="Image 1"></a><br>
-       <p><b>Renée Charmichael</b>
+       <p><b>Renée Charmichael</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=6559" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/03.png" alt="Image 1"></a><br>
           <p><b>Mene Savasta</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=12022" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/04.png" alt="Image 1"></a><br>
    <p><b>Malena Sout Arenas</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=16463" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/05.png" alt="Image 1"></a><br>
-       <p><b>Gabi Leoni</b>
+       <p><b>Gabi Leoni</b>/<p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=19906" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/06.png" alt="Image 1"></a><br>
           <p><b>Julián Brangold</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=24822" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/07.png" alt="Image 1"></a><br>
    <p><b>Santiago Giusto</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=28685" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/08.png" alt="Image 1"></a><br>
-       <p><b>Diego Alberti</b>
+       <p><b>Diego Alberti</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=32748" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/09.png" alt="Image 1"></a><br>
-         <p><b>Mecha Mio</b>
+         <p><b>Mecha Mio</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=37195" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/10.png" alt="Image 1"></a><br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -
