--- a/public/main.html
+++ b/public/main.html
@@ -444,7 +444,7 @@ In Front of a Nightclub<br>
       <a href="https://youtu.be/2XUOTyi9EFw?t=12022" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/04.png" alt="Image 1"></a><br>
    <p><b>Malena Sout Arenas</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=16463" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/05.png" alt="Image 1"></a><br>
-       <p><b>Gabi Leoni</b>/<p>
+       <p><b>Gabi Leoni</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=19906" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/06.png" alt="Image 1"></a><br>
           <p><b>Julián Brangold</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=24822" target=”_blank><img class="lazyload" src="assets/img/41_pasar la noche juntos/07.png" alt="Image 1"></a><br>
