--- a/public/main.html
+++ b/public/main.html
@@ -143,14 +143,14 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <p>Planos</p>
       <br>
       <br>
-      <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/01.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/02.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/03.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/04.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/05.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/06.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/07.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/08.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/01.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/02.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/03.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/04.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/05.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/06.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/07.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/05_casa freesbee plantas de arquitectura/08.jpg" alt="Image 1">
       <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
@@ -310,7 +310,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <br>
       <a href="https://creciendoenpublico.substack.com/" target=”_blank”>https://creciendoenpublico.substack.com/</a><br>
         <br>
-      <img class="lazyload" src="assets/img/21_newsletter/07.png" alt="Image 1">
+      <img loading="lazy" src="assets/img/21_newsletter/07.png" alt="Image 1">
       <br>
       <br>
       <p><u><b>Introducción</b></u></p>
@@ -318,7 +318,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
 </p>
          <br>
       <br>
-       <img class="lazyload" src="assets/img/21_newsletter/04.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/21_newsletter/04.jpg" alt="Image 1">
       <br>
       <br>
         <p><u><b>Vanguardistas 01 </b></u>
@@ -337,7 +337,7 @@ Crítica y Clínica <br> </i>
       <p>En un momento J.B. dice algo sobre la moda y los artistas: “para un artista es un problema caer en la moda”. Después le digo a J.B. que <i>1.Hay algo lindo en la idea de moda (fashionista) que es dejarse arrastrar por las olas que pasan con la confianza de que la singularidad persistirá. </i> Al leer ahora lo que escribí pienso “quién puede escribir así? La palabra <i>persistirá</i> me da vergüenza”. Pero ya sé donde está el error: en vez de haber dicho eso debería haber escrito sobre el “three arm sweater” de Issey Miyake. No puedo dejar de pensar en ese sweater desde que lo vi por primera vez y cada vez que alguien dice la palabra moda, o se refiere a la moda en algún sentido, pienso en el sweater de tres brazos de Issey Miyake. Me regocijo en el momento en el que el tercer brazo da la vuelta alrededor del cuello y pierde toda su radicalidad para distribuir el exceso de tela en un manojo de <i>plisses</i>. Describir su belleza, la forma que tiene de absorber todas las convenciones (el agujero para el cuello, el agujero para cada brazo, los largos..) y con un exceso mínimo, casi como si se tratara de un error de fabricación, darlas vuelta con mucha gracia.
         </p>
         <br>
-            <img class="lazyload" src="assets/img/21_newsletter/01.jpg" alt="Image 1">
+            <img loading="lazy" src="assets/img/21_newsletter/01.jpg" alt="Image 1">
         <p> <i> Three Arm Sweater <br>
         Issey Miyake <br>
 1980s </i></p>
