--- a/public/main.html
+++ b/public/main.html
@@ -692,6 +692,31 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <p>créditos</p>
       <!-- Add more content here if needed -->
   </div>
+       <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="cenotafios">
+      <span class="anchor" id="cute-chitecture"></span>
+      <h3>.</h3>
+      <p>.</p>
+      <br>
+      <br>
+      <img class="lazyload" src="/assets/img/43_cute-chitecture ii/01.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/02.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/03.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/04.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/05.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/06.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/07.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/08.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/09.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/10.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/11.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/12.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/13.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/14.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/15.jpg" alt="Image 1"> 
+         <img class="lazyload" src="/assets/img/43_cute-chitecture ii/16.jpg" alt="Image 1"> 
+      <p>créditos</p>
+      <!-- Add more content here if needed -->
+  </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="mothershiptheatre"></span>
       <h3>MothershipTheatre</h3>
