--- a/public/main.html
+++ b/public/main.html
@@ -139,7 +139,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC2"></span>
-      <h3></h3>
+      <h3> </h3>
       <p>Planos</p>
       <br>
       <br>
@@ -157,7 +157,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="freesbeexsg">
       <span class="anchor" id="casaJBRC3"></span>
-      <h3>.</h3>
+      <h3 style="color:white;">.</h3>
       <p>Fotografías</p> 
       <br>
       <br>
