--- a/public/index.html
+++ b/public/index.html
@@ -67,20 +67,20 @@
       <br><br><a href="#vanguardias">Vanguardias o Nada <br>/ Texto</a><br><a href="#casaFG2">/ Manifiestos Prospectivos </a>
       <br><br><a href="#ametralladora">Ametralladora de Utopías <br>/ Texto</a><br><a href="#casaFG2">/ Personajes Sensibles</a>
       <br><br><a href="#estados">Estados de la Arquitectura <br>/ Seis Alegorías</a> <a href="#casaFG3">/ Imágenes</a>
-       <br><br><a href="#estados">Agrupación Militancia Arquitectura <br>/ Fanzine 2013</a> 
-       <br><br><a href="#estados">Personajismo<br>/ Del Arquitecto-Estrella al Arquitecto-Constelación</a>
+      <br><br><a href="#estados">Agrupación Militancia Arquitectura <br>/ Fanzine 2013</a> 
+      <br><br><a href="#estados">Personajismo<br>/ Del Arquitecto-Estrella al Arquitecto-Constelación</a>
       <br><br><a href="#estados">El Cuerpo Hueco de la Arquitectura<br>/Circular #01. Arquitectura, Cuerpo y Cosmos</a>
       <br><br><a href="#estados">Architecture Postponed<br>/Texto</a><br><a href="#casaFG2">/ An Architecture Museum </a>
       <br><br><a href="#estados">Tu Amorosa<br>/Serla</a><br>
       <br><br><a href="#estados">Never Even <br> /(Respeto por las Cosas como Son)</a>
       <br><br><a href="#estados">Singular 00 <br> /Proposición</a>
       <br><br><a href="#estados">Hacia una Arquitectura sin Fin <br> /Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
-       <br><br><a href="#estados">Un Memorial para la Revolución<br> / Texto</a> <br><a href="#casaFG3">/ .</a>
+      <br><br><a href="#estados">Un Memorial para la Revolución<br> / Texto</a> <br><a href="#casaFG3">/ .</a>
       <br><br><a href="#estados">En el Muro <br>/Texto</a> <br><a href="#casaFG3">/ .</a> <br><a href="#casaFG3">/ .</a>
       <br><br><a href="#estados">Parque de las Ciencias<br> /Texto</a> <br><a href="#casaFG3">/ .</a> <br><a href="#casaFG3">/ .</a>
       <br><br><a href="#estados">Laberinto <br>/Texto</a> <br><a href="#casaFG3">/ .</a> <br><a href="#casaFG3">/ .</a>
       <br><br><a href="#estados">Geometrías Invisibles <br>/Texto</a> <br><a href="#casaFG3">/ .</a> 
-       <br><br><a href="#estados">Hoy el Mundo <br>/Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
+      <br><br><a href="#estados">Hoy el Mundo <br>/Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
       <br><br><a href="#estados">Estudio <br>/Texto</a>  <a href="#casaFG3">/ Oficina/a>
       <br><br><a href="#estados">Sitio Web <br>/Multicolumna</a>
     </div>
@@ -238,13 +238,17 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
+    
+    <div class="column2" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    </div>
+    
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP3"></span>
       <h3 style="color:white;">.</h3>
       <p>Fotos</p>
       <br>
       <br>
-            <img class="lazyload" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/02.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/03.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/04.jpg" alt="Image 1">
