--- a/public/index.html
+++ b/public/index.html
@@ -239,7 +239,10 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <!-- Add more content here if needed -->
     </div>
     
-    <div class="column2" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor"></span>
+      <h3 style="color:white;">.</h3>
+      <p style="color:white;">.</p>
     </div>
     
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -253,7 +256,7 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/03.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/04.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/05.jpg" alt="Image 1">
-      <img loading="lazy"" src="assets/img/03_avalos 2172_fotos/06.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/03_avalos 2172_fotos/06.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/11.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/07.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/08.jpg" alt="Image 1">
