--- a/public/index.html
+++ b/public/index.html
@@ -266,7 +266,7 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <p>Fotos</p>
       <br>
       <br>
-      <img class="lazyload" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/02.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/03.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/04.jpg" alt="Image 1">
@@ -471,7 +471,7 @@ In Front of a Nightclub<br>
       <!-- Add more content here if needed -->
     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>Pasar la Noche Juntos</h3>
+      <h3 style="color:white;">.</h3>
       <p>Lorem Ipsum</p> 
       <br>
    <p><b>Magdalena Molinari</b></p>
@@ -495,8 +495,15 @@ In Front of a Nightclub<br>
          <p><b>Mecha Mio</b></p>
       <a href="https://youtu.be/2XUOTyi9EFw?t=37195" target=”_blank><img loading="lazy" src="assets/img/41_pasar la noche juntos/10.png" alt="Image 1"></a><br>
       <p>lorem ipsum dolor</p>
-      <!-- Add more content here if needed -
+      <!-- Add more content here if needed -->
     </div>
+
+    <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor"></span>
+      <h3 style="color:white;">.</h3>
+      <p style="color:white;">.</p>
+    </div>
+    
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFG"></span>
       <h3>Edificio S.C.W.</h3>
