--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
   <div class="container">
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
-      <b><a href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b><br>
+      <b><a href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br> <p>Índice</p>
       <br><a href="#matters">Matters of Fact <br> / El Inevitable Sufrimiento de la Arquitectura</a>
@@ -1605,7 +1605,6 @@ Performance corporal: Sofia Kauer y Ana S. <br>
     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3 style="color:white;">.</h3>
-       <br>
         <p>Imágenes</p>
       <br>
      <br>
