--- a/public/index.html
+++ b/public/index.html
@@ -814,9 +814,9 @@ In Miesian clearspan floor and ceiling are two hovering, apparently uninterrupte
    <br>
       <br>
       <p>Parte del Lab 009 de Jesse Reiser en la Escuela de Arquitectura y Estudios Urbanos de la Universidad Torcuato Di Tella.
-Dirección: Ciro Najle
-Profesor: Manuel Mensa
-Alumnos: Michel Hunziker, Celeste Mourad, Mariano Galindez, Cloe Sierchuk, Micaela Zadravec.
+<br>Dirección: Ciro Najle
+<br>Profesor: Manuel Mensa
+<br>Alumnos: Michel Hunziker, Celeste Mourad, Mariano Galindez, Cloe Sierchuk, Micaela Zadravec.
 </p>
      
       <!-- Add more content here if needed -->
