--- a/public/index.html
+++ b/public/index.html
@@ -369,14 +369,14 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <p>Puentes</p>
       <br>
       <br>
-      <img loading="lazy" src="/assets/img/43_cute-chitecture ii/01.jpg" alt="Image 1"> 
-         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/02.jpg" alt="Image 1"> 
-         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/03.jpg" alt="Image 1"> 
-         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/04.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/05.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/06.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/07.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/08.jpg" alt="Image 1"> 
+         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/01.jpg" alt="Image 1"> 
+         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/02.jpg" alt="Image 1"> 
+         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/03.jpg" alt="Image 1"> 
+         <img loading="lazy" src="/assets/img/43_cute-chitecture ii/04.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/09.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/10.jpg" alt="Image 1"> 
          <img loading="lazy" src="/assets/img/43_cute-chitecture ii/11.jpg" alt="Image 1"> 
@@ -993,6 +993,7 @@ Empujamos todos juntos para abrir una puerta y, como estaba trabada desde afuera
     <br>
     <p>Dirección: Ciro Najle
 <br> Equipo editorial: Anna Font, Manuel Mensa, Lucas Torres Agüero, Carolina Telo
+      <br>Archivos de Arquitectura 2018, Escuela de Arquitectura y Estudios Urbanos, Universidad Torcuato Di Tella
     </p>
       <!-- Add more content here if needed -->
     </div>
