--- a/public/index.html
+++ b/public/index.html
@@ -51,15 +51,15 @@
       <b><a href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br> <p>Índice</p>
-      <br><a href="#matters">Matters of Fact <br> / El Inevitable Sufrimiento de la Arquitectura</a>
-      <br><br><a style="text-decoration:none">Casa J.B.R.C. <br> </a><a href="#casaJBRC">/ Texto Descriptivo </a><br><a href="#casaJBRC2">/ Planos </a><br><a href="#casaJBRC3">/ Fotografías x S.G. </a> <br><a href="#casaJBRC4">/ Series</a>
-      <br><br><a style="text-decoration:none">Casa E.R.C.P. </a> <br><a href="#casaERCP">/ Texto Descriptivo </a> <br><a href="#casaERCP2">/ Planos </a> <br><a href="#casaERCP3">/ Fotografías x F.S. </a>
-      <br><br><a style="text-decoration:none">Casa F.G. </a> <br><a href="#casaFG">/ Texto Descriptivo </a> <br><a href="#casaFG2">/ Planos </a> <br><a href="#casaFG3">/ Fotografías</a>
-      <br><br><a href="#cute-chitecture">Cute-chitecture <br>/ Arquitectura Póstuma</a> <br><a href="#casaFG3">/ Cenotafios </a> <br><a href="#casaFG3">/ Puentes </a> 
-      <br><br><a href="#edificioSCW">Edificio S.C.W. <br>/ Texto </a> <br> <a href="#casaFG3">/ Dibujos </a> <br> <a href="#casaFG3">/ Imágenes</a> 
-      <br><br><a href="#casaFKL">Casa F.K.L. <br>/ Texto</a> <br><a href="#casaFG2">/ Dibujos </a> <br><a href="#casaFG3">/ Fotografías</a> <br><a href="#casaFG3">/ Videos </a> 
-      <br><br><a href="#creciendo">Creciendo en Público <br>/ Newsletter Errático</a>
-      <br><br><a href="#erewhon">Erewhon <br>/ Textos</a> <br><a href="#casaFG3">/ Proposiciones</a> <br><a href="#casaFG2">/ Dibujos </a> <br><a href="#casaFG3">/ Imágenes</a>
+      <br><a href="#matters">Matters of Fact <br>  El Inevitable Sufrimiento de la Arquitectura</a>
+      <br><br><b><a style="text-decoration:none">Casa J.B.R.C. <br> </a></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
+      <br><br><a style="text-decoration:none">Casa E.R.C.P. </a> <br><b><a href="#casaERCP"> Texto </a> </b><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
+      <br><br><b><a style="text-decoration:none">Casa F.G. </a> </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
+      <br><br><b><a href="#cute-chitecture">Cute-chitecture </b> <br> Arquitectura Póstuma</a> <br><a href="#casaFG3"> Cenotafios </a> <br><a href="#casaFG3"> Puentes </a> 
+      <br><br><b> <a href="#edificioSCW">Edificio S.C.W. <br> </b> Texto </a> <br> <a href="#casaFG3"> Dibujos </a> <br> <a href="#casaFG3"> Imágenes</a> 
+      <br><br><b><a href="#casaFKL">Casa F.K.L. </b><br> Texto</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a> <br><a href="#casaFG3"> Videos </a> 
+      <br><br><b><a href="#creciendo">Creciendo en Público <br></b> Newsletter Errático</a>
+      <br><br><b> <a href="#erewhon">Erewhon <br> </b> Textos</a> <br><a href="#casaFG3"> Proposiciones</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
       <br><br><a href="#estados">Personajismo<br>/ Del Arquitecto-Estrella al Arquitecto-Constelación</a>
       <br><br><a href="#muros">Muros, Puertas y Vanos <br>/ Hacia un Minimalismo Explosivo</a>
       <br><br><a href="#mothershiptheatre">MothershipTheatre <br>/ Thesis for an Opaque Architecture</a> <br><a href="#casaFG2">/ Imágenes </a> <br><a href="#casaFG3">/ Videos e</a>  
